# MAS_LSLM

./: .gitignore  README.md  env.sh  requirements.txt
data/math_split/: metadata.json  public.jsonl
data/math_split/clients/client_0/: infer.jsonl
data/math_split/clients/client_1/: infer.jsonl  train.jsonl
data/math_split/clients/client_2/: infer.jsonl  train.jsonl
data/scripts/: split_math_non_iid.py
single_mas/: __init__.py  data.py  exp.md  experiment_configs.py  inference.py  models.py  parsing.py  prompts.py  pyproject.toml  rewards.py  schemas.py
single_mas/cli/: common.py  infer.py  prepare_mlpo_data.py  prepare_sft_data.py  smoke_sft.py  train.py
single_mas/training/: __init__.py  datasets.py  trainer.py
